explore button path changed
Signed-off-by: kundansurve <kundansurve01@gmail.com>

--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
                 <p class="paragraph-1">Chandigarh is India's first planned city, quite distinct from the rest of the country and considerably better organized.<br> It is the capital of both Haryana and Punjab, but the city itself is not part of either state,<br> being a union
                     territory, i.e. administered directly by the central government.</p>
             </div>
-            <a href="Visit.html" class="btn btn-1">Explore</a>
+            <a href="map.html" class="btn btn-1">Explore</a>
         </div>
     </section>
     <div class="container">
