--- a/static/food.html
+++ b/static/food.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-color">
+    <nav class="navbar navbar-expand-lg navbar-color" style="position: sticky; top: 0px;left: 0px;z-index:5;">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
